--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
               </div>
               <div class="w-100"></div>
               <div class="col-6">
-                <p class="sub_title">경쟁사의 주력 상품을 보고 타겟소싱의 클루를 찾아 현장에 적용해보아여!</p>
+                <p class="sub_title">경쟁사의 주력 상품을 보고 타겟소싱의 클루를 찾아 현장에 적용해보아요!</p>
               </div>
             </div>
             <div class="filter_area row">
