--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="UTF-8">
-
+  <title>TV상품 소싱 레이더</title>
   <link href="css/font-face.css" rel="stylesheet" media="all">
   <link rel="stylesheet" href="css/loading.min.css">
   <link rel="stylesheet" href="css/style.css">
